add basic styles and print json data

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <title>Risotto de setas vegano</title>
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
 
-    HOLA
+  <body>
+    <section class="title">
+      <h1 class="title--recipe-name"></h1>
+    </section>
+
+    <ul class="ingredients-list">
+    </ul>
+
+    <section class="purchase-finish">
+
+    </section>
 
   </body>
-
   <script type="text/javascript" src="main.js"></script>
 </html>
